crates/uselesskey-ecdsa/tests/snapshots/snapshots_ecdsa__jwk_snapshots__ecdsa_kid_format.snap
---
source: crates/uselesskey-ecdsa/tests/snapshots_ecdsa.rs
expression: info
---
len: 16
is_base64url_chars: true
