crates/uselesskey-ecdsa/tests/snapshots/snapshots_ecdsa__jwk_snapshots__ecdsa_p256_public_jwk.snap
---
source: crates/uselesskey-ecdsa/tests/snapshots_ecdsa.rs
expression: shape
---
kty: EC
crv: P-256
alg: ES256
use_: sig
kid: "[REDACTED]"
x: "[REDACTED]"
y: "[REDACTED]"
