crates/uselesskey-ecdsa/tests/snapshots/snapshots_ecdsa__jwk_snapshots__ecdsa_p384_public_jwk.snap
---
source: crates/uselesskey-ecdsa/tests/snapshots_ecdsa.rs
expression: shape
---
kty: EC
crv: P-384
alg: ES384
use_: sig
kid: "[REDACTED]"
x: "[REDACTED]"
y: "[REDACTED]"
