crates/uselesskey-ecdsa/tests/snapshots/snapshots_ecdsa__jwk_snapshots__jwks_p384.snap
---
source: crates/uselesskey-ecdsa/tests/snapshots_ecdsa.rs
expression: result
---
curve: P-384
key_count: 1
first_key_kty: EC
first_key_crv: P-384
