crates/uselesskey-ecdsa/tests/snapshots/snapshots_ecdsa__jwk_snapshots__private_jwk_p256.snap
---
source: crates/uselesskey-ecdsa/tests/snapshots_ecdsa.rs
expression: result
---
curve: P-256
kty: EC
crv: P-256
alg: ES256
has_d: true
d_byte_len: 32
