crates/uselesskey-ecdsa/tests/snapshots/snapshots_ecdsa__jwk_snapshots__private_jwk_p384.snap
---
source: crates/uselesskey-ecdsa/tests/snapshots_ecdsa.rs
expression: result
---
curve: P-384
kty: EC
crv: P-384
alg: ES384
has_d: true
d_byte_len: 48
