crates/uselesskey-ecdsa/tests/snapshots/snapshots_ecdsa__jwk_snapshots__snapshot_es384_private_jwk_structure.snap
---
source: crates/uselesskey-ecdsa/tests/snapshots_ecdsa.rs
expression: redacted
---
alg: ES384
crv: P-384
d: "[REDACTED]"
kid: "[REDACTED]"
kty: EC
use: sig
x: "[REDACTED]"
y: "[REDACTED]"
